# TuringMachine

./: CMakeLists.txt  DenseTuringMachine.cpp  DenseTuringMachine.h  Main.cpp  MenuSystem.cpp  MenuSystem.h  README.md  SparseTuringMachine.cpp  SparseTuringMachine.h  TuringMachine.h  TuringMachineState.cpp  TuringMachineState.h  TuringTape.cpp  TuringTape.h
